--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-The-Morgan-Kaufmann-Series-in-Data-Management-Systems-Jiawei-Han-Micheline-Kamber-Jian-Pei-Data-Mining.-Concepts-and-Techniques-3rd-Edition-Morgan-Kaufmann-2011*
+Exercise/data
